--- a/feriados/core/templates/natal.html
+++ b/feriados/core/templates/natal.html
@@ -1,14 +1,18 @@
-<DOCTYPE!>
-<html>
+<!DOCTYPE html>
+<html lang="pt_br">
     <head>
-        <meta charset='UTF-8'>
-        <title> Feriado Natal </title>
+    <meta charset="UTF-8">
+        <title>Feriado de Natal</title>
     </head>
     <body>
         {% if natal %}
-            <h1>É Natal</html>
+          <h1>É natal</h1>
         {% else %}
-            <h1>Não é Natal</h1>
+          <h1>Não é natal</h1>
         {% endif %}
+        <form method="post" action="{% url 'tiradentes' %}">
+          {% csrf_token %}
+          <input type="submit" value="Verificar o Feriado Tiradentes">
+        </form>
     </body>
 </html>
