--- a/feriados/core/templates/tiradentes.html
+++ b/feriados/core/templates/tiradentes.html
@@ -1,14 +1,14 @@
-<DOCTYPE!>
-<html>
+<!DOCTYPE html>
+<html lang="pt_br">
     <head>
-        <meta charset='UTF-8'>
-        <title> Feriado Tiradentes </title>
+    <meta charset="UTF-8">
+        <title>Feriado de Tiradentes</title>
     </head>
     <body>
         {% if tiradentes %}
-            <h1>É dia de Tiradentes</html>
+          <h1>Hoje é dia de Tiradentes, 21 de abril</h1>
         {% else %}
-            <h1>Não é dia de tiradentes</h1>
+          <h1>Não é dia de Tiradentes</h1>
         {% endif %}
     </body>
 </html>
